syntax="proto3";

package auth;

option go_package="model/";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
}

message DeliverTokenReq {
  int32  user_id= 1;
}

message VerifyTokenReq {
  string token = 2;
}

message DeliveryResp {
  string token = 3;
}

message VerifyResp {
  bool res = 4;
}